--- a/style.css
+++ b/style.css
@@ -1,32 +1,38 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'opens sans',sans-serif;
+    font-family: 'opens sans', sans-serif;
 }
-body{
+
+body {
     height: 100vh;
     background-color: black;
     background-image: url('assets/body.jpg');
     background-position: center;
     background-size: cover;
 }
-li{
+
+li {
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
     color: aliceblue;
     font-size: 1rem;
 }
-a:hover{
+
+a:hover {
     color: rgb(246, 15, 15);
 }
-header{
+
+header {
     position: relative;
     padding: 0 2rem;
 }
-.navBar{
+
+.navBar {
     width: 100%;
     height: 60px;
     max-width: 1200px;
@@ -35,21 +41,25 @@ header{
     align-items: center;
     justify-content: space-between;
 }
-.navBar .logo a{
+
+.navBar .logo a {
     font-size: 1.5rem;
     font-weight: bold;
 }
-.navBar .links{
+
+.navBar .links {
     display: flex;
     gap: 2rem;
 }
-.navBar .toggle_btn{
+
+.navBar .toggle_btn {
     color: aliceblue;
     font-size: 1.5rem;
     cursor: pointer;
     display: none;
 }
-.action_btn{
+
+.action_btn {
     background-color: red;
     color: aliceblue;
     padding: 0.5rem 1rem;
@@ -61,11 +71,64 @@ header{
     cursor: pointer;
     transition: scale 0.2 ease;
 }
-.action_btn:hover{
+
+.action_btn:hover {
     scale: 1.5rem;
     color: aliceblue;
 
 }
-.action_btn:active{
+
+.action_btn:active {
     scale: 0.95;
+    color: #fff;
+}
+
+/* Drop down  */
+.drop-downMenu {
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    height: 0;
+    width: 300px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.drop-downMenu.open {
+    height: 240px;
+}
+
+.drop-downMenu li {
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.drop-downMenu .action_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+/* RESPONSIVE DESIGN */
+@media (max-width:990px) {
+
+    .navBar .links,
+    .navBar .action_btn {
+        display: none;
+    }
+
+    .navBar .toggle_btn {
+        display: block;
+    }
+
+    .drop-downMenu {
+        display: block;
+    }
 }
