--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
@@ -23,6 +24,7 @@
   --z-tooltip: 10;
   --z-fixed: 100;
 }
+
 @media screen and (min-width: 1024px) {
   :root {
     --normal-font-size: 1rem;
@@ -74,12 +76,14 @@ a {
 .nav {
   height: var(--header-height);
 }
+
 .nav__data {
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .nav__logo {
   display: inline-flex;
   align-items: center;
@@ -88,18 +92,23 @@ a {
   font-weight: var(--font-semi-bold);
   transition: color 0.3s;
 }
+
 .nav__logo i {
   font-size: 1.25rem;
 }
+
 .nav__logo:hover {
   color: var(--first-color);
 }
+
 .nav__toggle {
   position: relative;
   width: 32px;
   height: 32px;
 }
-.nav__toggle-menu, .nav__toggle-close {
+
+.nav__toggle-menu,
+.nav__toggle-close {
   font-size: 1.25rem;
   color: var(--title-color);
   position: absolute;
@@ -109,9 +118,11 @@ a {
   cursor: pointer;
   transition: opacity 0.1s, transform 0.4s;
 }
+
 .nav__toggle-close {
   opacity: 0;
 }
+
 @media screen and (max-width: 1118px) {
   .nav__menu {
     background-color: var(--body-color);
@@ -126,13 +137,16 @@ a {
     opacity: 0;
     transition: top 0.4s, opacity 0.3s;
   }
+
   .nav__menu::-webkit-scrollbar {
     width: 0.5rem;
   }
+
   .nav__menu::-webkit-scrollbar-thumb {
     background-color: hsl(220, 12%, 70%);
   }
 }
+
 .nav__link {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
@@ -142,6 +156,7 @@ a {
   align-items: center;
   transition: background-color 0.3s;
 }
+
 .nav__link:hover {
   background-color: var(--first-color-lighten);
 }
@@ -168,51 +183,65 @@ a {
 .dropdown__button {
   cursor: pointer;
 }
+
 .dropdown__arrow {
   font-size: 1.5rem;
   font-weight: initial;
   transition: transform 0.4s;
 }
-.dropdown__content, .dropdown__group, .dropdown__list {
+
+.dropdown__content,
+.dropdown__group,
+.dropdown__list {
   display: grid;
 }
+
 .dropdown__container {
   background-color: var(--first-color-lighten);
   height: 0;
   overflow: hidden;
   transition: height 0.4s;
 }
+
 .dropdown__content {
   row-gap: 1.75rem;
 }
+
 .dropdown__group {
   padding-left: 2.5rem;
   row-gap: 0.5rem;
 }
+
 .dropdown__group:first-child {
   margin-top: 1.25rem;
 }
+
 .dropdown__group:last-child {
   margin-bottom: 1.25rem;
 }
+
 .dropdown__icon i {
   font-size: 1.25rem;
   color: var(--body-color);
 }
+
 .dropdown__title {
   font-size: var(--small-font-size);
   font-weight: var(--font-semi-bold);
   color: var(--title-color);
 }
+
 .dropdown__list {
   row-gap: 0.25rem;
 }
+
 .dropdown__link {
   font-size: var(--smaller-font-size);
   font-weight: var(--font-medium);
   color: var(--text-color);
   transition: color 0.3s;
 }
+
 .dropdown__link:hover {
   color: var(--title-color);
 }
@@ -229,36 +258,45 @@ a {
     padding-left: 1.5rem;
   }
 }
+
 /* For large devices */
 @media screen and (min-width: 1118px) {
+
   /* Nav */
   .nav {
     height: calc(var(--header-height) + 2rem);
     display: flex;
     justify-content: space-between;
   }
+
   .nav__toggle {
     display: none;
   }
+
   .nav__list {
     display: flex;
     column-gap: 3rem;
     height: 100%;
   }
+
   .nav li {
     display: flex;
   }
+
   .nav__link {
     padding: 0;
   }
+
   .nav__link:hover {
     background-color: initial;
   }
+
   /* Dropdown */
   .dropdown__button {
     column-gap: 0.25rem;
     pointer-events: none;
   }
+
   .dropdown__container {
     height: max-content;
     position: absolute;
@@ -271,23 +309,29 @@ a {
     opacity: 0;
     transition: top 0.4s, opacity 0.3s;
   }
+
   .dropdown__content {
     grid-template-columns: repeat(4, max-content);
     column-gap: 6rem;
     max-width: 1120px;
     margin-inline: auto;
   }
+
   .dropdown__group {
     padding: 4rem 0;
     align-content: baseline;
     row-gap: 1.25rem;
   }
-  .dropdown__group:first-child, .dropdown__group:last-child {
+
+  .dropdown__group:first-child,
+  .dropdown__group:last-child {
     margin: 0;
   }
+
   .dropdown__list {
     row-gap: 0.75rem;
   }
+
   .dropdown__icon {
     width: 60px;
     height: 60px;
@@ -297,33 +341,113 @@ a {
     place-items: center;
     margin-bottom: 1rem;
   }
+
   .dropdown__icon i {
     font-size: 2rem;
   }
+
   .dropdown__title {
     font-size: var(--normal-font-size);
   }
+
   .dropdown__link {
     font-size: var(--small-font-size);
   }
+
   .dropdown__link:hover {
     color: var(--first-color);
   }
+
   .dropdown__item {
     cursor: pointer;
   }
+
   .dropdown__item:hover .dropdown__arrow {
     transform: rotate(180deg);
   }
-  .dropdown__item:hover > .dropdown__container {
+
+  .dropdown__item:hover>.dropdown__container {
     top: 5.5rem;
     opacity: 1;
     pointer-events: initial;
     cursor: initial;
   }
 }
+
 @media screen and (min-width: 1152px) {
   .container {
     margin-inline: auto;
   }
+}
+
+/* body  */
+.home {
+  margin-left: 100px;
+  margin-top: 200px;
+  margin-bottom: 0px;
+}
+
+.t1 {
+
+  font-size: 4.5rem;
+  font-weight: var(--font-semi-bold);
+  font-family: var(--body-font);
+  color: var(--first-color-lighten);
+}
+
+.t2 {
+  font-size: 3.9rem;
+  color: var(--first-color);
+}
+
+.b1 {
+  background-color: #651FFF;
+  margin: 2px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 20px;
+  width: 300px;
+  color: #FFFFFF;
+  font-weight: bold;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.image {
+  height: 200px;
+  width: 2100px;
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+
+}
+
+.image2 {
+  height: 9rem;
+  width: 89rem;
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+}
+
+.image3 {
+  height: 1rem;
+  width: 60rem;
+  display: flex;
+  justify-content: end;
+  align-items: flex-end;
+}
+.Chat-bot{
+  margin-top: 200px;
+  margin-bottom: 0px;
+}
+.t3{
+
+  font-size: 4.5rem;
+  font-weight: var(--font-semi-bold);
+  font-family: var(--body-font);
+  color: var(--first-color-lighten);
+}
+.Bg{
+  width: 110%;
 }
